--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script defer src = "index.js" charset = "utf-8"></script>
     </head>
     <body>
-        <h1>Album Generator</h1>
+        <h1 class = "header">Album Generator</h1>
         
         <div class = "dropdown">
 
